--- a/package.json
+++ b/package.json
@@ -17,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/kristyvanatta/e-commerce/issues"
   },
-  "homepage": "https://github.com/kristyvanatta/e-commerce#readme"
+  "homepage": "https://github.com/kristyvanatta/e-commerce#readme",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.25.6"
+  }
 }
